@@ -1,4 +1,4 @@
-VERSION=1.2.22
+VERSION=1.2.23
 PYTHON=python
 
 help:
