@@ -48,3 +48,9 @@ def get_id_by_token(token):
     if saved is None or not saved["active"]:
         return None
     return saved["login"]
+
+
+def get_active_tokens():
+    """Returns active tokens"""
+    return [t for t in Token.find_all()
+        if t["active"]]
